Move long running test into integration tests